# annextube

./: .bash_history  .containerignore  .gitignore  .jscpd.json  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  COOKIE_DEMO_README.md  Containerfile  DATA_INTEGRITY_VERIFICATION.md  DEMO_ANDRIY_POPYK.sh  DEMO_SETUP.md  EXAMPLE_UNAVAILABLE_FILTERING.md  FINAL_MVP_STATUS.md  LICENSE  MVP_COMPREHENSIVE_DEMO.sh  MVP_DEMO.md  MVP_RESULTS_COMPREHENSIVE.md  README.md  WHERE_TO_CHECK.md  WHERE_TO_SEE_RESULTS.md  docker-compose.yml  files.html  hatch_build.py  pyproject.toml  tox.ini
.claude/commands/: troubleshoot-cron.md
.datalad/: config
.duct/logs/: 2026.02.07T14.27.11-1974809_info.json  2026.02.07T14.27.11-1974809_stderr  2026.02.07T14.27.11-1974809_stdout  2026.02.07T14.27.11-1974809_usage.json  2026.02.07T15.23.50-2111540_info.json  2026.02.07T15.23.50-2111540_stderr  2026.02.07T15.23.50-2111540_stdout  2026.02.07T15.23.50-2111540_usage.json  2026.02.07T16.30.37-2263032_info.json  2026.02.07T16.30.37-2263032_stdout  2026.02.07T16.30.37-2263032_usage.json  2026.02.07T16.31.11-2264505_info.json  2026.02.07T16.31.11-2264505_stdout  2026.02.07T16.31.11-2264505_usage.json  2026.02.08T08.19.23-3763137_info.json  2026.02.08T08.19.23-3763137_stderr  2026.02.08T08.19.23-3763137_stdout  2026.02.08T08.19.23-3763137_usage.json  2026.02.08T08.57.48-3955820_info.json  2026.02.08T08.57.48-3955820_stdout  2026.02.08T08.57.48-3955820_usage.json  2026.02.09T10.25.10-2545973_info.json  2026.02.09T10.25.10-2545973_stderr  2026.02.09T10.25.10-2545973_stdout  2026.02.09T10.25.10-2545973_usage.json
.github/workflows/: deploy-demo.yml  test.yml
.pki/nssdb/: key4.db  pkcs11.txt
.specify/memory/: constitution.md
.specify/specs/: caption-curation.md  caption-search-pagefind.md  contributing-guide.md  multi-channel-collections.md  speckit-workflow.md  unavailable-video-filtering.md  youtube-quota-and-interruption-handling.md
annextube/: __main__.py
annextube/cli/: __main__.py  aggregate.py  backup.py  build_search_index.py  check.py  collection.py  completion.py  curate_captions.py  embed_config.py  export.py  generate_web.py  info.py  init.py  init_user_config.py  prepare_ghpages.py  serve.py  unannex.py
annextube/lib/: annex_utils.py  archive_discovery.py  cli_options.py  config.py  date_utils.py  error_utils.py  file_utils.py  logging_config.py  process_semaphore.py  quota_manager.py  range_server.py  tsv_utils.py  ytdlp_ratelimit.py
annextube/models/: __init__.py  author.py  channel.py  curation.py  playlist.py  sync_state.py  video.py
annextube/schema/: extra_metadata.yaml  models.json
annextube/services/: archiver.py  authors.py  caption_curator.py  collection.py  export.py  git_annex.py  llm_corrector.py  search_index.py  sync_state.py  tsv_reader.py  unannex.py  youtube.py  youtube_api.py
assets/: index-BLJHnYOp.js
demo/: authors.tsv
demo/.annextube/: config.toml
demo/playlists/: playlists.tsv
demo/web/: index.html
frontend/: .eslintrc.json  .gitignore  .prettierrc  README.md  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  test-video-seeking.spec.ts  tsconfig.json  vite.config.ts
frontend/scripts/: create-e2e-fixture.sh  ensure-playwright-browsers.sh  generate-types.js
frontend/src/: App.svelte  app.css  vite-env.d.ts
specs/001-youtube-backup/: FRONTEND_ARCHITECTURE_COMPARISON.md  FRONTEND_MVP_DEMO.md  FRONTEND_PROGRESS.md  FRONTEND_TODO.md  MVP_DEMO.md  TODO_PLAYLIST_ENHANCEMENT.md  TSV_REFACTORING_SUMMARY.md  data-model.md  gh-pages-phase1-plan.md  plan.md  pre-release-checks.md  quickstart.md  research.md  spec.md  tasks.md  test-channel-plan.md  test_tsv_refactoring.sh
specs/002-mkv-video-playback/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multi-channel-collections/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
test-archives/: DEMO_RESULTS.md  FINAL_RESULTS.md  HIERARCHICAL_STRUCTURE_RESULTS.md  README.md  RUN-ALL.sh  SUMMARY.md  VIDEO_QUALITY_CHECK.md  cleanup-git.sh  commit-fix.sh  complete-test.sh  demo-cookies.sh  test-hierarchical-apopyk.sh  test-hierarchical-datalad.sh  test_init_backup_check.sh  verify_frontend_data.py
tests/: conftest.py  test_component_mode_bug.py  test_date_filtering.py  test_tsv_refactoring.py
tests/contract/: test_backup_json.py  test_collection_cli.py
tests/e2e/: README.md  test_collection_e2e.py  test_multi_channel.py  test_web_ui.py  verify_archive.py
tests/fixtures/: sample_glossary.yaml  sample_karaoke.vtt
tests/integration/: test_api_enhanced_metadata.py  test_checkpoint_commits.py  test_collection.py  test_comprehensive_backup.py  test_e2e_backup_features.py  test_incremental_backup.py  test_new_video_components.py  test_no_timestamp_commits.py  test_search_index_build.py  test_update_annexed_files.py
tests/unit/: test_annex_utils.py  test_archive_discovery.py  test_atomic_file_write.py  test_batch_api_optimization.py  test_caption_curator.py  test_collection_config.py  test_collection_service.py  test_completion.py  test_config_precedence.py  test_curation_config.py  test_datalad_init.py  test_embed_config.py  test_error_reporting.py  test_export_channel_json.py  test_git_annex_channel_json_timestamps.py  test_git_annex_metadata.py  test_git_annex_timestamp_filter.py  test_hierarchical_video_paths.py  test_init.py  test_new_video_detection.py  test_playlist_model.py  test_playlist_symlinks.py  test_process_semaphore.py  test_quota_estimator.py  test_quota_manager.py  test_retroactive_curation.py  test_sdist_frontend.py  test_search_index.py  test_tsv_escaping.py  test_unavailable_video_filtering.py  test_video_model.py  test_youtube_api_client.py  test_youtube_api_quota_handling.py  test_youtube_service_playlist.py  (+1 more)
tools/: .gitignore  README.md  check-duplication.sh  client_secrets.json.example  deploy-demo.sh  setup-demo-branch.sh  setup_demo_branch.sh  setup_test_channel.py  spec-check.sh  test-container.sh  test_api_metadata.py  test_api_metadata.sh  test_results.json
videos/: videos.tsv
(+81 files in other folders)
