[project]
name = "annextube"
dynamic = ["version"]
description = "YouTube archive system using git-annex for efficient storage and incremental updates"
authors = [{name = "Yaroslav Halchenko", email = "debian@onerussian.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "datasalad>=0.3.0",
    "yt-dlp>=2024.1.0",
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "google-api-python-client>=2.0.0",  # For YouTube Data API v3 comment fetching
    "platformdirs>=4.0.0",  # Cross-platform config directory discovery
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.21.0",
]
devel = [
    "annextube[test]",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
    "tox>=4.0",
    "tox-uv>=1.0",
]
ci = [
    "annextube[devel]",
    "tox-gh-actions>=3.0",
]

[project.scripts]
annextube = "annextube.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/con/annextube"
Documentation = "https://annextube.readthedocs.io"
Repository = "https://github.com/con/annextube"
"Bug Tracker" = "https://github.com/con/annextube/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["annextube", "annextube.models", "annextube.services", "annextube.cli", "annextube.lib"]

[tool.setuptools_scm]
# Automatically determine version from git tags
version_file = "annextube/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = ["tests"]
markers = [
    "ai_generated: Tests generated by AI assistants",
    "slow: Tests that take a long time to run",
    "integration: Integration tests",
    "contract: Contract tests for API boundaries",
    "network: Tests that require network access and may use real APIs",
]

[tool.coverage.run]
source = ["annextube"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "datasalad.*",
    "yt_dlp.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
