[project]
name = "annextube"
dynamic = ["version"]
description = "YouTube archive system using git-annex for efficient storage and incremental updates"
authors = [{name = "Yaroslav Halchenko", email = "debian@onerussian.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "datasalad>=0.3.0",
    "yt-dlp>=2026.2.0",  # Requires recent version for challenge solver 0.4.0+
    "deno>2.6.6",  # JS runtime required by yt-dlp for YouTube extraction
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "google-api-python-client>=2.0.0",  # For YouTube Data API v3 comment fetching
    "platformdirs>=4.0.0",  # Cross-platform config directory discovery
    "python-magic>=0.4.27",  # MIME type detection for downloaded files
    "pyyaml>=6.0",  # YAML glossary parsing for caption curation
    "tomlkit>=0.12.0",  # Comment-preserving TOML editing for embed-config
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.21.0",
    "annextube[datalad]",
]
e2e = [
    "annextube[test]",
    "playwright>=1.40",
    "pytest-playwright>=0.4.0",
]
datalad = [
    "datalad>=1.0.0",  # For DataLad dataset creation
]
audio-align = [
    "stable-ts>=2.15.0",
    "openai-whisper>=20231117",
]
devel = [
    "annextube[test]",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
    "types-PyYAML",
    "tox>=4.0",
    "tox-uv>=1.0",
]
ci = [
    "annextube[devel]",
    "tox-gh-actions>=3.0",
]

[project.scripts]
annextube = "annextube.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/con/annextube"
Documentation = "https://annextube.readthedocs.io"
Repository = "https://github.com/con/annextube"
"Bug Tracker" = "https://github.com/con/annextube/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
# Clean semver format: 0.2.0 on tag, 0.2.0.post1+gc6bd677 after tag
raw-options = { version_scheme = "post-release", local_scheme = "node-and-date" }

[tool.hatch.build]
# web/ is gitignored but contains the built Svelte frontend (created by
# hatch_build.py hook).  Force-include bypasses the directory walk so it
# works even with skip-excluded-dirs (which prunes gitignored dirs).
artifacts = ["web/**/*"]

[tool.hatch.build.force-include]
"web" = "web"

[tool.hatch.build.hooks.vcs]
version-file = "annextube/_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["annextube"]

[tool.hatch.build.targets.sdist]
# Without this, hatchling walks INTO excluded dirs checking each file individually,
# which is catastrophically slow with e.g. .cache (17GB/1.3M files in containers).
skip-excluded-dirs = true
exclude = [
    # Build/dev tool caches
    ".cache",
    ".venv",
    ".tox",
    ".npm",
    ".deno",
    ".duct",
    "node_modules",
    # User/container home directory artifacts
    ".config",
    ".local",
    ".worktrees",
    ".anaconda",
    ".conda",
    ".pki",
    ".ssh",
    ".vim",
    # Frontend source (built output is in web/ instead)
    "frontend",
    # Dev tools (contains test .mp4 files, API credentials, etc.)
    "tools",
    # Planning/spec docs (not needed for building)
    "specs",
    "docs",
    ".claude",
    ".specify",
    ".datalad",
    # Container/CI files
    "Containerfile",
    ".containerignore",
    "docker-compose.yml",
    ".github",
    "scripts",
    # Misc non-dist files
    "test-archives",
    "caption.png",
    "COOKIE_DEMO_README.md",
    ".noannex",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "-m", "not network"]
xfail_strict = true
testpaths = ["tests"]
markers = [
    "ai_generated: Tests generated by AI assistants",
    "slow: Tests that take a long time to run",
    "integration: Integration tests",
    "contract: Contract tests for API boundaries",
    "network: Tests that require network access and may use real APIs",
]

[tool.coverage.run]
source = ["annextube"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "datasalad.*",
    "yt_dlp.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["annextube/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
